# corba-binding

./: .gitignore  README.md  build.gradle  settings.gradle
cb-sample/: .gitignore  CMakeLists.txt  build.gradle  run.sh  settings.gradle
cb-sample/gradle/wrapper/: gradle-wrapper.properties
cb-sample/src/main/: .gitignore
cb-sample/src/main/cpp/: com_matejhrazdira_cbsample_Sample.cpp  com_matejhrazdira_cbsample_Sample.h
cb-sample/src/main/cpp-server/: EventProducer.h  NativeWrapper.cpp  NativeWrapper.h  StringBuilder.h  common.h  corbabindinglib.cpp  corbabindinglib.h  main.cpp
cb-sample/src/main/idl/: Config.json  Simple.idl
cb-sample/src/main/java/com/matejhrazdira/cbsample/: Sample.java
cb-sample/src/test/java/com/matejhrazdira/cbsample/: CorbaProviderTest.java  SampleTest.java
gradle/wrapper/: gradle-wrapper.properties
misc/: check-header.sh
misc/notes/: parser.fods
misc/util/: check-header.sh  check-headers.sh  header.txt
src/main/javacc/: idl.jj
src/main/resources/: AlreadyDisposedException.java.template  CorbaException.java.template  CorbaProvider.java.template  Disposable.java.template  EventConsumer.java.template  EventProducer.java.template  EventService.java.template  JniCache.cpp.template  JniCache.h.template  Var.java.template  corbabinding.cpp.template  corbabinding.h.template  corbabindinglib.cpp.template  corbabindinglib.h.template  jniimpl.cpp.template  jniimpl.h.template  jniimpl.private.cpp.template  (+1 more)
tests/: SampleConfig.json
tests/comments/: comments.idl
tests/composed/: included.idl  main.idl
tests/cppcorba/: .gitignore  simple-without-array-declarators.idl
tests/simple/: simple-without-array-declarators.idl  simple.idl
(+219 files in other folders)
